<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg_image"
    tools:ignore="HardcodedText">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Calculator"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:hint="@string/First_number"
            android:id="@+id/first"
            android:paddingLeft="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="#ffff"
            android:inputType="number"
            android:background="@drawable/button_shape"
            android:layout_weight="1"
            >

        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:hint="@string/Second_number"
            android:id="@+id/second"
            android:paddingLeft="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffff"
            android:inputType="number"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            >

        </EditText>

        </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:id="@+id/result"
    android:hint="@string/Result"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:textColor="#ffff"
    android:layout_margin="10dp"
    android:textSize="25sp"
    android:inputType="number"
    android:background="@drawable/button_shape"
    android:paddingTop="5dp"
    >
</EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:textColor="#ffff"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:hint="@string/Addition" />

        <Button
            android:id="@+id/substraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Substrtion"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_shape"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Multification"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Division"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_shape"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Developer_name"
        android:textColor="#F2BB15"
        android:textSize="25sp"></TextView>



</LinearLayout>